<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_personalDetails"
            android:title="@string/personal_details" />
        <item
            android:id="@+id/nav_education"
            android:title="Education" />
        <item
            android:id="@+id/nav_skillsAndExpertise"
            android:title="@string/skills_and_expertise" />
        <item
            android:id="@+id/nav_experience"
            android:title="@string/experience" />
        <item
            android:id="@+id/nav_portfolio"
            android:title="@string/portfolio" />

    </group>
</menu>